add style for header and update style for footer

--- a/src/assets/style/settings/colors.styl
+++ b/src/assets/style/settings/colors.styl
@@ -1,7 +1,8 @@
 $primary-color = #363636
 $secondary-color = #fffc00
-$item-color = #a0a0a0
+$item-bg = #a0a0a0
 $item-hover = #5e5e5e
 $dev-color = red
-$text-color = #eaeaea
+$text-color-I = #eaeaea
+$text-color-II = #fff
 $heart = #fc01f2
