--- a/src/assets/style/main.styl
+++ b/src/assets/style/main.styl
@@ -18,7 +18,9 @@
 @import 'objects/beer'
 
 /* components */
+@import 'components/container'
 @import 'components/header'
+@import 'components/main'
 @import 'components/footer'
 
 
