--- a/src/assets/style/components/header.styl
+++ b/src/assets/style/components/header.styl
@@ -34,6 +34,7 @@
   color $item-bg
   margin-top $spacing-level1 0 0 0
   font-size 18px
+  margin 0
 
 @media(min-width 700px)
   .header__block__description
