--- a/src/assets/style/settings/colors.styl
+++ b/src/assets/style/settings/colors.styl
@@ -2,7 +2,7 @@ $primary-color = #363636
 $secondary-color = #fffc00
 $item-bg = #a0a0a0
 $item-hover = #5e5e5e
-$dev-color = red
+//$dev-color = red
 $text-color-I = #eaeaea
 $text-color-II = #fff
 $heart = #fc01f2
