--- a/src/assets/style/objects/beer-detail.styl
+++ b/src/assets/style/objects/beer-detail.styl
@@ -54,3 +54,34 @@
   color $text-color-I
   margin $spacing-level1 0 0 0
   font-weight 300
+
+.dont-has-item
+  position relative
+  display flex
+  flex 1
+  background url('../../img/beer-detail.jpg') no-repeat center center fixed
+  background-size cover
+
+.dont-has-item__block
+  margin 40px auto
+  display flex
+  justify-content center
+  align-items center
+  flex-direction column
+  width 100%
+
+.dont-has-item__block__img
+  width 50%
+
+.dont-has-item__msg
+  color $secondary-color
+  font-size 22px
+  font-weight 300
+  max-width 250px
+  width 100%
+  margin 0
+
+@media(min-width 700px)
+  .dont-has-item__msg
+    max-width 400px
+    font-size 28px
