--- a/src/assets/style/objects/beer.styl
+++ b/src/assets/style/objects/beer.styl
@@ -33,3 +33,9 @@
 
 .beer-list__item__link__tagline
   font-size 14px
+
+.beer-hasErrored
+  font-size 32px
+  color $text-color-I
+  z-index 1
+  height 100%
