--- a/public/assets/style/main.css
+++ b/public/assets/style/main.css
@@ -54,6 +54,23 @@ body,
   z-index: 1;
   height: 100%;
 }
+.beer-list-loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.beer-list-loading__img {
+  width: 150px;
+  margin: 0;
+}
+.beer-list-loading__text {
+  color: #fffc00;
+  font-size: 20px;
+  font-weight: 300;
+  margin: 0;
+}
 .beer-detail {
   display: flex;
   align-items: center;
@@ -117,8 +134,6 @@ body,
   position: relative;
   display: flex;
   flex: 1;
-  background: url("../../img/beer-detail.jpg") no-repeat center center fixed;
-  background-size: cover;
 }
 .dont-has-item__block {
   margin: 40px auto;
