--- a/src/assets/style/objects/beer.styl
+++ b/src/assets/style/objects/beer.styl
@@ -39,3 +39,21 @@
   color $text-color-I
   z-index 1
   height 100%
+
+.beer-list-loading
+  width 100%
+  height 100%
+  display flex
+  align-items center
+  flex-direction column
+
+.beer-list-loading__img
+  width 150px
+  margin 0
+
+.beer-list-loading__text
+  color $secondary-color
+  font-size 20px
+  font-weight 300
+  margin 0
+
