--- a/src/assets/style/objects/beer.styl
+++ b/src/assets/style/objects/beer.styl
@@ -48,7 +48,7 @@
   flex-direction column
 
 .beer-list-loading__img
-  width 150px
+  width 120px
   margin 0
 
 .beer-list-loading__text
@@ -57,3 +57,30 @@
   font-weight 300
   margin 0
 
+.beer-list-has-errored
+  display flex
+  flex 1
+  justify-content center
+  align-items center
+  flex-direction column
+  width 100%
+
+.beer-list-has-errored__img
+  width 60%
+
+@media(min-width 700px)
+  .beer-list-has-errored__img
+    width 30%
+
+.beer-list-has-errored__text
+  color $secondary-color
+  font-size 18px
+  font-weight 300
+  max-width 250px
+  width 100%
+  margin 0
+
+@media(min-width 700px)
+  .beer-list-has-errored__text
+    max-width 400px
+    font-size 22px
