--- a/src/assets/style/objects/beer.styl
+++ b/src/assets/style/objects/beer.styl
@@ -58,12 +58,17 @@
   margin 0
 
 .beer-list-has-errored
-  display flex
-  flex 1
+  /*
+  //flex 1
   justify-content center
   align-items center
+  flex-direction column*/
+  display flex
   flex-direction column
+  justify-content center
+  align-items center
   width 100%
+  margin 40px auto
 
 .beer-list-has-errored__img
   width 60%
