--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -48,6 +48,64 @@ body,
 .beer-list__item__link__tagline {
   font-size: 14px;
 }
+.beer-hasErrored {
+  font-size: 32px;
+  color: #eaeaea;
+  z-index: 1;
+  height: 100%;
+}
+.beer-list-loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.beer-list-loading__img {
+  width: 120px;
+  margin: 0;
+}
+.beer-list-loading__text {
+  color: #fffc00;
+  font-size: 20px;
+  font-weight: 300;
+  margin: 0;
+}
+.beer-list-has-errored {
+/*
+  //flex 1
+  justify-content center
+  align-items center
+  flex-direction column*/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 40px auto;
+}
+.beer-list-has-errored__img {
+  width: 60%;
+}
+@media (min-width: 700px) {
+  .beer-list-has-errored__img {
+    width: 30%;
+  }
+}
+.beer-list-has-errored__text {
+  color: #fffc00;
+  font-size: 18px;
+  font-weight: 300;
+  max-width: 250px;
+  width: 100%;
+  margin: 0;
+}
+@media (min-width: 700px) {
+  .beer-list-has-errored__text {
+    max-width: 400px;
+    font-size: 22px;
+  }
+}
 .beer-detail {
   display: flex;
   align-items: center;
@@ -106,6 +164,35 @@ body,
   color: #eaeaea;
   margin: 10px 0 0 0;
   font-weight: 300;
+}
+.dont-has-item {
+  position: relative;
+  display: flex;
+}
+.dont-has-item__block {
+  margin: 40px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+.dont-has-item__block__img {
+  width: 50%;
+}
+.dont-has-item__msg {
+  color: #fffc00;
+  font-size: 22px;
+  font-weight: 300;
+  max-width: 250px;
+  width: 100%;
+  margin: 0;
+}
+@media (min-width: 700px) {
+  .dont-has-item__msg {
+    max-width: 400px;
+    font-size: 28px;
+  }
 }
 /* components */
 .container {
